objects/Sprint_User__c.object
<CustomObject>
    <fields>
        <fullName>ALM_User__c</fullName>
        <label>ALM User</label>
        <referenceTo>ALM_User__c</referenceTo>
        <relationshipLabel>Spint Users</relationshipLabel>
        <relationshipName>Spint_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role</label>
        <referenceTo>ALM_User_Role__c</referenceTo>
        <relationshipLabel>Spint Users</relationshipLabel>
        <relationshipName>Spint_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Spint Users</relationshipLabel>
        <relationshipName>Spint_Users</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sprint User</label>
    <nameField>
        <displayFormat>SU-{000000}</displayFormat>
        <label>Sprint User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>